# gen2-energiminer

./: .gitignore  .travis.yml  BuildInfo.h.in  CHANGELOG.txt  CMakeLists.txt  LICENSE  README.md  Toolchain-x86_64-w64-mingw32.cmake  appveyor.yml  futoin.json
cmake/: EthCompilerSettings.cmake  HunterGate.cmake
cmake/Hunter/: config.cmake
cmake/cable/: CableBuildInfo.cmake  CableBuildType.cmake  bootstrap.cmake
cmake/cable/buildinfo/: buildinfo.c.in  buildinfo.cmake  buildinfo.h.in  gitinfo.cmake
common/: CMakeLists.txt  Log.cpp  Log.h  common.h  portable_endian.h  utilstrencodings.cpp  utilstrencodings.h
energiminer/: CMakeLists.txt  CpuMiner.cpp  CpuMiner.h  FarmClient.h  Log.cpp  Log.h  MinerAux.cpp  MinerAux.h  Terminal.h  TestMiner.cpp  TestMiner.h  arith_uint256.h  common.cpp  common.h  datatypes.txt  main.cpp  mineplant.cpp  mineplant.h  miner.cpp  miner.h  minercommon.cpp  minercommon.h  plant.h  sha2.c  solution.cpp  solution.h  transaction.cpp  transaction.h  work.cpp  work.h  worker.cpp  worker.h
energiminer/common/: Log.cpp  Log.h  ZeroAfterFreeAllocator.h  common.h  merkle.cpp  merkle.h  portable_endian.h  serialize.h  streams.h
energiminer/egihash/: egihash.cpp  egihash.h  keccak-tiny.c
energiminer/egihash/.deps/: cpuminer-egihash.Po  cpuminer-keccak-tiny.Po
energiminer/nrghash/: keccak-tiny.h  nrghash.cpp  nrghash.h
energiminer/primitives/: ZeroAfterFreeAllocator.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  block.h  endian.h  hash.h  prevector.h  script.cpp  script.h  serialize.h  sha256.cpp  sha256.h  transaction.cpp  transaction.h  uint256.cpp  uint256.h
energiminer/protocol/: GBTClient.h  MiningClient.h  StratumClient.cpp  StratumClient.h
libdevcore/: Log.h
libegihash-cl/: CLMiner_kernel.cl  CMakeLists.txt  OpenCLMiner.cpp  OpenCLMiner.h
libethash/: internal.h
libethash-cl/: CLMiner.h  CLMiner_backup.cpp_bk  CMakeLists.txt  kernetl_with_comments
libethcore/: BlockHeader.cpp  EthashAux.cpp  EthashAux.h
libhwmon/: CMakeLists.txt  wrapadl.cpp  wrapadl.h  wrapamdsysfs.cpp  wraphelper.h  wrapnvml.cpp
libnrghash-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
libnrghash-cl/kernels/: Makefile  README.md
libnrghash-cl/kernels/cl/: nrghash.cl  old_nrghash.cl
libnrghash-cl/kernels/isa/: GCN3_nrghash_search.isa  GCN5_nrghash_search.isa  GCN_nrghash.isa
libnrghash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  dagger_shuffled.cuh  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h
misc/: start.cmd  start.sh
nrgcore/: CMakeLists.txt  mineplant.cpp  mineplant.h  miner.cpp  miner.h  plant.h
nrghash/: .CMakeLists.txt.swp  CMakeLists.txt  keccak-tiny.c
primitives/: CMakeLists.txt  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.h  block.h  byteswap.h  extranoncesingleton.cpp  extranoncesingleton.h  hash.h  merkle.cpp  merkle.h  script.cpp  script.h  sha256.cpp  sha256.h  solution.cpp  solution.h  transaction.cpp  transaction.h  uint256.cpp  uint256.h  work.cpp  work.h  worker.cpp  worker.h
protocol/: CMakeLists.txt  GBTClient.h  PoolClient.h  PoolManager.cpp  PoolManager.h  PoolURI.cpp  PoolURI.h  StratumClient.cpp  StratumClient.h
protocol/getwork/: GetworkClient.cpp  GetworkClient.h  jsonrpc_getwork.h
protocol/stratum/: EthStratumClient.cpp  EthStratumClient.h  StratumClient.cpp  StratumClient.h
protocol/testing/: .SimulateClient.cpp.swp  SimulateClient.cpp  SimulateClient.h
